Navbar section markup done

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./src/assets/Collab_Space_icon.png"
-    />
+    <!-- Logo Font: Poppins -->
+    <!-- prettier-ignore -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <!-- Headings Font: Montserrat -->
+    <!-- prettier-ignore -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+    <!-- Body Font: Inter -->
+    <!-- prettier-ignore -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+    <!-- prettier-ignore -->
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Collab_Space_icon.png"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collab Space</title>
   </head>
